...
                .padding(top = 90.dp)
        ) {
            Column(
                modifier = Modifier.padding(16.dp)
            ) {
                Text(
                    text = "Общая статистика (в USD)",
                    style = MaterialTheme.typography.titleLarge,
                    modifier = Modifier
                        .padding(bottom = 8.dp)
                        .padding(top = 8.dp)
                )
                StatisticRow("Доходы", income)
...
